--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.decisionmaker"
+        applicationId "com.rcmdev.decisionmaker"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
